fix: dark mode 時 vssue 的 color

--- a/blog/.vuepress/styles/index.styl
+++ b/blog/.vuepress/styles/index.styl
@@ -44,6 +44,9 @@
   .vssue-comments
     margin-top 30px
 
+  .markdown-body
+    color var(--c-text)
+
 
 @media (max-width: $MQMobile)
   .vuepress-blog-theme-content
